platform-charts/monitoring/templates/prometheus/prometheus-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-http-route
spec:
  parentRefs:
    - name: default-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "prometheus.192.168.100.243.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-prometheus-server
          port: 80
